--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -13,6 +13,9 @@
     <p>Age: Puppy</p>
     {% endif %}
   </div>
+  <div class="card-action">
+    <a href="{% url 'dogs_update' dog.id%}">Edit</a>
+    <a href="{% url 'dogs_delete' dog.id%}">Delete</a>
+  </div>
 </div>
-
 {% endblock %}
