--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,6 +16,7 @@
       type="text/css"
       href="{% static 'css/style.css' %}"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
     <header class="navbar-fixed">
@@ -28,6 +29,8 @@
           </ul>
           <ul class="right">
             <li><a href="{% url 'about'%}">About</a></li>
+            <li><a href="{% url 'toys_create' %}">Add a Toy </a></li>
+            <li><a href="{% url 'toys_index' %}">View Toys </a></li>
             <li><a href="{% url 'dogs_create' %}">Add a Dog</a></li>
             <li><a href="{% url 'index'%}">View all My Dogs</a></li>
           </ul>
